Attempt to fix down arrow on mobile view.

--- a/css/styles.css
+++ b/css/styles.css
@@ -97,6 +97,7 @@ footer {
     bottom: 0;
     width: 100px;
     height: 43px;
+    display: inline-block;
 }
 
 .card {
